# movie-ticketing-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.continue/mcpServers/: tikceting-mcp-server.yaml
.cursor/: mcp.json
src/movie_ticketing_mcp_server/: __init__.py  fastmcp_server.py  http_client.py  server.py  setting.py
