[project]
name = "movie-ticketing-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kilsoo Kang", email = "kilsoo75@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
movie-ticketing-mcp-server = "movie_ticketing_mcp_server:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
